[package]
name = "named_colors"
version = "0.1.0"
authors = ["Paterne GNONZION"]
description = "Un module Rust permettant de gérer les couleurs par nom"
repository = "https://github.com/PaterneGNONZION/named_colors_rust"
license = "MIT"
edition = "2021"

[lib]
name = "named_colors"
path = "src/lib.rs"

[features]
# Ajouter des features pour les tests

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.8"

[dev-dependencies]
# Pour les tests